Remove sort order, rename ucs stuff to be generic, various doc string and comment fixes
