# openapi.yaml
@@ -19,28 +19,6 @@ components:
       - boxes
       title: BoxRetrievalResults
       type: object
-    ClaimValidity:
-      description: Start and end dates for validating claims.
-      properties:
-        valid_from:
-          description: Start date of validity
-          examples:
-          - '2023-01-01T00:00:00Z'
-          format: date-time
-          title: Valid From
-          type: string
-        valid_until:
-          description: End date of validity
-          examples:
-          - '2023-12-31T23:59:59Z'
-          format: date-time
-          title: Valid Until
-          type: string
-      required:
-      - valid_from
-      - valid_until
-      title: ClaimValidity
-      type: object
     CreateUploadBoxRequest:
       description: Request model for creating a new research data upload box.
       properties:
@@ -83,13 +61,35 @@ components:
           title: User Id
           type: string
         validity:
-          $ref: '#/components/schemas/ClaimValidity'
+          $ref: '#/components/schemas/GrantValidity'
       required:
       - validity
       - user_id
       - iva_id
       - box_id
       title: GrantAccessRequest
+      type: object
+    GrantValidity:
+      description: Start and end dates for validating grants.
+      properties:
+        valid_from:
+          description: Start date of validity
+          examples:
+          - '2023-01-01T00:00:00Z'
+          format: date-time
+          title: Valid From
+          type: string
+        valid_until:
+          description: End date of validity
+          examples:
+          - '2023-12-31T23:59:59Z'
+          format: date-time
+          title: Valid Until
+          type: string
+      required:
+      - valid_from
+      - valid_until
+      title: GrantValidity
       type: object
     GrantWithBoxInfo:
       description: An UploadGrant with the ResearchDataUploadBox title and description.
@@ -197,7 +197,7 @@ components:
           title: File Count
           type: integer
         file_upload_box_id:
-          description: The ID of the file upload box.
+          description: The ID of the corresponding file upload box.
           format: uuid4
           title: File Upload Box Id
           type: string
@@ -250,13 +250,6 @@ components:
       - locked
       - closed
       title: ResearchDataUploadBoxState
-      type: string
-    SortOrder:
-      description: Represents the possible sorting orders
-      enum:
-      - ascending
-      - descending
-      title: SortOrder
       type: string
     UpdateUploadBoxRequest:
       description: Request model for updating a research data upload box.
@@ -464,14 +457,6 @@ paths:
           - type: 'null'
           description: Maximum number of research data upload boxes to return
           title: Limit
-      - description: Sort order(s) that shall be used when sorting results
-        in: query
-        name: sort
-        required: false
-        schema:
-          $ref: '#/components/schemas/SortOrder'
-          default: ascending
-          description: Sort order(s) that shall be used when sorting results
       responses:
         '200':
           content:
